--- a/python-pickle.cabal
+++ b/python-pickle.cabal
@@ -22,6 +22,7 @@ library
   build-depends:
       base >= 4.7 && < 5
     , binary >=0.2
+    , STMonadTrans >=0.1
     , transformers >=0.0
   default-language:    Haskell2010
   ghc-options:         -Wall
