--- a/python-pickle.cabal
+++ b/python-pickle.cabal
@@ -24,6 +24,7 @@ library
     , binary >=0.2
     , STMonadTrans >=0.1
     , transformers >=0.0
+    , utf8-string >=0.3
   default-language:    Haskell2010
   ghc-options:         -Wall
                        -Wcompat
