--- a/python-pickle.cabal
+++ b/python-pickle.cabal
@@ -20,12 +20,16 @@ library
       Data.Python.Literals
     , Data.Python.Pickle
     , Data.Python.Pickle.Class
+    , Data.Python.Pickle.Command
     , Data.Python.Pickle.Core
+    , Data.Python.Pickle.Failable
+    , Data.Python.Pickle.State
   build-depends:
       base >= 4.7 && < 5
     , binary >=0.2
     , STMonadTrans >=0.1
     , transformers >=0.0
+    , unordered-containers >=0.1.0.0
     , utf8-string >=0.3
   default-language:    Haskell2010
   ghc-options:         -Wall
